- Fixed bug #36988 (mktime freezes on long numbers)